:lipstick: Add CSS & Improve HTML code

--- a/index.html
+++ b/index.html
@@ -9,18 +9,37 @@
 </head>
 <body>
 
-    <header class="main_header">
 
-        <a href="index.html" class="logo">Aled</a>
-        <div class="toggle"></div>
-        <ul>
-            <li><a href="#one">Team</span></a></li>
-            <li><a href="#two">Cars</span></a></li>
-            <li><a href="#trois">Adventure</span></a></li>
-        </ul>
-    </header>
+    <section class="home">
+        <header class="main_header">
 
+            <a href="index.html" class="logo">Aled</a>
+            <div class="toggle"></div>
+            <ul>
+                <li><a href="#one">Team</span></a></li>
+                <li><a href="#two">Cars</span></a></li>
+                <li><a href="#trois">Adventure</span></a></li>
+            </ul>
+        </header>
+    </section>
+    <section class="contain">
+        <h2>Présentation CSGO</h2>
+    </section>
     
+
+
+
+
+
+
+
+
+    <script>
+        window.addEventListener('scroll',function(){
+        var header = document.querySelector('header');
+        header.classList.toggle('sticky',window.scrollY > 0);
+            });
+    </script>
     
 </body>
 </html>
