:lipstick: Improve css code

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <a href="index.html" class="logo">Aled</a>
             <div class="toggle"></div>
             <ul>
-                <li><a href="#one">Team</span></a></li>
-                <li><a href="#two">Cars</span></a></li>
-                <li><a href="#trois">Adventure</span></a></li>
+                <li><a href="#one">Home</span></a></li>
+                <li><a href="#two">Presentation</a></span></a></li>
+                <li><a href="#trois">Footer</span></a></li>
             </ul>
         </header>
     </section>
