:construction: Add footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,27 @@
     </section>
     
 
-
+    <footer>
+        <div class="top">
+            <ul>
+                <li><a href="#"><img src=" https://cdn-icons-png.flaticon.com/512/1384/1384005.png" alt=""></a></li>
+                <li><a href="#"><img src=" https://cdn-icons-png.flaticon.com/512/1384/1384015.png" alt=""></a></li>
+                <li><a href="#"><img src="" alt=""></a></li>
+                <li><a href="#"><img src="" alt=""></a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Home</a></li>
+            </ul>
+            <a href="#">(mettre le lien de la page steam cs)</a>
+        </div>
+        <div class="bot">
+            <p>Made by Adam AMMAR</p>
+        </div>
+    </footer>
 
 
 
